Fixed line-hight below minnimum value and fixed font size issues

--- a/sample/colorscheme-names.html
+++ b/sample/colorscheme-names.html
@@ -38,7 +38,7 @@
     div.caption {
       float: left;
       color: #555;
-      font-size: 12px;
+      font-size: .75rem;
       line-height: 1rem;
       margin: 0 0 0 10px;
     }
