--- a/sample/typography.html
+++ b/sample/typography.html
@@ -138,8 +138,8 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 38px<br />
-                            line-height: 1.1
+                            font-size: 2.4rem<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -152,8 +152,8 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 31px<br />
-                            line-height: 1.1
+                            font-size: 1.94rem<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -166,8 +166,8 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 25px<br />
-                            line-height: 1.1
+                            font-size: 1.54rem<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -180,8 +180,8 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 20px<br />
-                            line-height: 1.1
+                            font-size: 1.25rem<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -194,8 +194,8 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 16px<br />
-                            line-height: 1.1
+                            font-size: 1rem<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -208,8 +208,8 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 14px<br />
-                            line-height: 1.1
+                            font-size: 0.8rem<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
