--- a/sample/colorscheme-sacramento.html
+++ b/sample/colorscheme-sacramento.html
@@ -116,7 +116,7 @@
 
         div.caption {
             color: #555;
-            font-size: 12px;
+            font-size: .75rem;
             line-height: 1rem;
             margin: 0 0 0 10px;
             text-align: center;
