--- a/sample/countdown.html
+++ b/sample/countdown.html
@@ -25,7 +25,7 @@ Based on Twitter Bootstrap
     <style>
         #demo, #demo2, #demo3, #demo4 {
             text-align: center;
-            font-size: 30px;
+            font-size: 1.875rem;
             margin-top: 0px;
             font-weight: 700;
             background-color: #153554;
@@ -34,7 +34,7 @@ Based on Twitter Bootstrap
         }
 
         .countdown-text {
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: 400;
         }
     </style>
@@ -325,7 +325,7 @@ if (distance < 0) {
 
 <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("Apr 1, 2020 00:00:00").getTime();
+    var countDownDate = new Date("Apr 1, 2030 00:00:00").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function () {
