--- a/cdn.html
+++ b/cdn.html
@@ -135,9 +135,48 @@
 
                 <h2>State Template core files CDN by version</h2>
                                 
-
+                <h3>State Template v6</h3>
                 <ul id="accordion" class="accordion-list list-overstated" role="tablist" multiselectable="true">
-                    <h3>State Template v6</h3>
+                    <li id="panel_v6_0_3" class="tab" aria-selected="false" aria-controls="panel_6_0_3" aria-expanded="false" role="tab" tabindex="0">
+                        <a>Version 6.0.3</a>
+                    </li>
+                    <div id="panel_6_0_3" class="panel" aria-labelledby="panel_v6_0_3" aria-hidden="true" role="tabpanel">
+                        <p>CSS</p>
+<pre>
+<code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.3/css/cagov.core.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/cagov.core.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/cagov.font-only.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/cagov.font-only.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-delta.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-delta.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-eureka.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-eureka.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-mono.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-mono.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-oceanside.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-oceanside.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-orangecounty.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-orangecounty.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-pasorobles.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-pasorobles.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-sacramento.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-sacramento.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-santabarbara.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-santabarbara.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-santacruz.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-santacruz.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-shasta.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-shasta.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-sierra.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-sierra.min.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-trinity.css
+https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-trinity.min.css
+    </code></pre>
+                        <p>JS</p>
+<pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.3/js/cagov.core.js
+https://california.azureedge.net/cdt/statetemplate/6.0.3/js/cagov.core.min.js
+</code></pre>
+                    </div>
                     <li id="panel_v6_0_2" class="tab" aria-selected="false" aria-controls="panel_6_0_2" aria-expanded="false" role="tab" tabindex="0">
                         <a>Version 6.0.2</a>
                     </li>
@@ -261,7 +300,7 @@ https://california.azureedge.net/cdt/statetemplate/6.0.0/js/cagov.core.min.js
                     </div>
 
 
-                    <h3>State Template v5.5</h3>
+                    <div class="h3">State Template v5.5</div>
                     <li id="panel_v5_5_20" class="tab" aria-selected="false" aria-controls="panel_5_5_20" aria-expanded="false" role="tab" tabindex="0">
                         <a>Version 5.5.20</a>
                     </li>
@@ -1024,7 +1063,7 @@ https://california.azureedge.net/cdt/statetemplate/5.5.0/js/cagov.core.min.js
 
 
 
-                    <h3>State Template v5</h3>
+                    <div class="h3">State Template v5</div>
                     <li id="tab_v5_0_17" class="tab" aria-selected="false" aria-controls="tab_5_0_17" aria-expanded="false" role="tab" tabindex="0">
                         <a>Version 5.0.17</a>
                     </li>
