--- a/sample/modules/accordion.html
+++ b/sample/modules/accordion.html
@@ -1,22 +1,22 @@
 <div class="panel-group accordion" id="example-accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
+            <h3 class="panel-title h4">
                 <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapseOne" aria-controls="collapseOne">Accordion #1</a>
-            </h4>
+            </h3>
         </div>
         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
-                Accordion 1 content  with <a href="#">link</a>
+                Accordion 1 content with <a href="#">link</a>
             </div>
         </div>
     </div>
 
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
+            <h3 class="panel-title h4">
                 <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapseTwo" aria-controls="collapseTwo">Accordion #2</a>
-            </h4>
+            </h3>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="panel-body">
@@ -27,9 +27,9 @@
 
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingThree">
-            <h4 class="panel-title">
+            <h3 class="panel-title h4">
                 <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapseThree" aria-controls="collapseThree">Accordion #3</a>
-            </h4>
+            </h3>
         </div>
         <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="panel-body">
