--- a/sample/modules/carousel-content-fit-image.html
+++ b/sample/modules/carousel-content-fit-image.html
@@ -1,5 +1,5 @@
 <div class="carousel owl-carousel carousel-content">
-    <div class="item">
+    <div class="item section-standout">
         <img src="/sample/images/gallery/orangecounty-big.jpg" alt="">
         <div class="content-container">
             <div class="content">
