--- a/sample/modules/form-select.html
+++ b/sample/modules/form-select.html
@@ -1,5 +1,5 @@
 <!--Select-->
-<label class="select">
+<label class="select overflow-auto">
     <span class="sr-only">Select options:</span>
     <select name="email" id="email">
         <option>Option 1</option>
