--- a/sample/modules/icon-image-blocks.html
+++ b/sample/modules/icon-image-blocks.html
@@ -1,37 +1,31 @@
 <!--Icon Image Blocks-->
-    <div class="group">
-        <div class="third m-b-lg">
-            <!-- Icon Blocks -->
-            <a href="/sample/color-schemes.html" class="no-underline d-block bg-grey-lightest-hover p-a-md" title="Features">
-                <div class="text-center">
-                    <img class="image-icon rounded-50x m-b" src="/sample/images/features-icon.png" alt="Features icon">
-                    <h3 class="h4 m-b-sm color-gray-dark">Features</h3>
-
-                    <p class="color-gray-dark">State Template includes 10 color schemes  and multiple page layouts samples</p>
-                </div>
-            </a>
-            <!-- End Icon Blocks -->
+<div class="group">
+    <div class="third m-b-lg">
+        <!-- Icon Blocks -->
+        <div class="text-center">
+            <img class="image-icon rounded-50x m-b-md" src="/sample/images/01.png" alt="Image Description">
+            <h3 class="h4 m-b-sm">Creative ideas</h3>
+       
+            <p>We strive to embrace and drive change in our industry which allows us to keep our clients relevant.</p>
         </div>
-        <div class="third m-b-lg">
-            <!-- Icon Blocks -->
-            <a href="/accessibility.html" class="no-underline d-block bg-grey-lightest-hover p-a-md" title="Accessibility">
-                <div class="text-center">
-                    <img class="image-icon rounded-50x m-b" src="/sample/images/accessibility-icon.png" alt="Accessibility Icon">
-                    <h3 class="h4 m-b-sm color-gray-dark">Accessibility</h3>
-                    <p class="color-gray-dark">State Template is designed, developed and maintained to be ADA compliant</p>
-                </div>
-            </a>
-            <!-- End Icon Blocks -->
+        <!-- End Icon Blocks -->
+    </div>
+    <div class="third m-b-lg">
+        <!-- Icon Blocks -->
+        <div class="text-center">
+            <img class="image-icon rounded-50x m-b-md" src="/sample/images/02.png" alt="Image Description">
+            <h3 class="h4 m-b-sm">Excellent features</h3>
+            <p>We strive to embrace and drive change in our industry which allows us to keep our clients relevant.</p>
         </div>
-        <div class="third m-b-lg">
-            <!-- Icon Blocks -->
-            <a href="/sample/" class="no-underline d-block bg-grey-lightest-hover p-a-md" title="Code">
-                <div class="text-center">
-                    <img class="image-icon rounded-50x m-b" src="/sample/images/code-icon.png" alt="Code icon">
-                    <h3 class="h4 m-b-sm color-gray-dark">Code</h3>
-                    <p class="color-gray-dark">State Template includes over 180 ready to use code samples</p>
-                </div>
-            </a>
-            <!-- End Icon Blocks -->
+        <!-- End Icon Blocks -->
+    </div>
+    <div class="third m-b-lg">
+        <!-- Icon Blocks -->
+        <div class="text-center">
+            <img class="image-icon rounded-50x m-b-md" src="/sample/images/03.png" alt="Image Description">
+            <h3 class="h4 m-b-sm">Fully responsive</h3>
+            <p>We strive to embrace and drive change in our industry which allows us to keep our clients relevant.</p>
         </div>
-    </div><!-- End group -->
+        <!-- End Icon Blocks -->
+    </div>
+</div><!-- End group -->
