--- a/sample/modules/news-block.html
+++ b/sample/modules/news-block.html
@@ -22,9 +22,9 @@
                     </li>
                 </ul>
 
-                <h4 class="m-t-0 m-b-sm">
+                <h3 class="h4 m-t-0 m-b-sm">
                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Incredible standard post</a>
-                </h4>
+                </h3>
 
                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -33,12 +33,12 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email DMV">
-                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                            <span class="ca-gov-icon-email" aria-hidden="true"></span><span class="sr-only">Email</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-share"></i><span class="sr-only">Share</span>
+                            <span class="ca-gov-icon-share" aria-hidden="true"></span><span class="sr-only">Share</span>
                         </a>
                     </li>
                 </ul>
@@ -70,9 +70,9 @@
                     </li>
                 </ul>
 
-                <h4 class="m-t-0 m-b-sm">
+                <h3 class="h4 m-t-0 m-b-sm">
                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Demperdiet molesti volutpa</a>
-                </h4>
+                </h3>
 
                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -81,12 +81,12 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDT">
-                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                            <span class="ca-gov-icon-email" aria-hidden="true"></span><span class="sr-only">Email</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-share"></i><span class="sr-only">Share</span>
+                            <span class="ca-gov-icon-share" aria-hidden="true"></span><span class="sr-only">Share</span>
                         </a>
                     </li>
                 </ul>
@@ -118,9 +118,9 @@
                     </li>
                 </ul>
 
-                <h4 class="m-t-0 m-b-sm">
+                <h3 class="h4 m-t-0 m-b-sm">
                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Nullam non metus inmi</a>
-                </h4>
+                </h3>
 
                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -129,12 +129,12 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDTFA">
-                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                            <span class="ca-gov-icon-email" aria-hidden="true"></span><span class="sr-only">Email</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-share"></i><span class="sr-only">Share</span>
+                            <span class="ca-gov-icon-share" aria-hidden="true"></span><span class="sr-only">Share</span>
                         </a>
                     </li>
                 </ul>
