--- a/sample/modules/service-tiles-empty.html
+++ b/sample/modules/service-tiles-empty.html
@@ -1,13 +1,13 @@
 <div tabindex="0" class="service-tile" data-tile-id="fakeid" style="background-image:url(/sample/images/service-tiles/driving-test.jpg); background-size: cover;">
     <div class="teaser">
-        <h4 class="title">Find a Traffic School</h4>
+        <h2 class="title h4">Find a Traffic School</h2>
     </div>
 </div>
 
 <div tabindex="0" class="service-tile service-tile-empty third" data-url="/" style="background-image:url(/sample/images/background_6.jpg); background-size: cover;">
     <span class="ca-gov-icon-gears"></span>
     <div class="teaser">
-        <h4 class="title">Find More State Services</h4>
+        <h2 class="title h4">Find More State Services</h2>
     </div>
 </div>
 
@@ -21,7 +21,7 @@
                 <button type="button" class="close btn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="group">
                     <div class="two-thirds">
-                        <h1 class="m-y-0 ">Find a Traffic School</h1>
+                        <h2 class="m-y-0 h1">Find a Traffic School</h2>
                         <p class="lead"><a href="">Department of Motor Vehicles (DMV)</a></p>
 
                         <div class="btn-row m-b">
@@ -67,7 +67,7 @@
             <div class="card card-block">
                 <div class="group">
                     <div class="two-thirds">
-                        <h1 class="m-y-0 ">Find a Traffic School</h1>
+                        <h2 class="m-y-0 h1">Find a Traffic School</h2>
                         <p class="lead"><a href="">Department of Motor Vehicles (DMV)</a></p>
 
                         <div class="btn-row m-b">
