--- a/sample/modules/carousel-content.html
+++ b/sample/modules/carousel-content.html
@@ -1,5 +1,5 @@
 <div class="carousel owl-carousel carousel-content">
-    <div class="item " style="background-image: url('/sample/images/gallery/orangecounty-big.jpg');">
+    <div class="item section-standout" style="background-image: url('/sample/images/gallery/orangecounty-big.jpg');">
         <div class="content-container">
             <div class="content">
                 <h2>Lorem ipsum dolor</h2>
@@ -7,7 +7,7 @@
             </div>
         </div>
     </div>
-    <div class="item backdrop" style="background-image: url('/sample/images/background_1.jpg');">
+    <div class="item backdrop section-standout" style="background-image: url('/sample/images/background_1.jpg');">
         <div class="content-container">
             <div class="content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -16,7 +16,7 @@
             </div>
         </div>
     </div>
-    <div class="item " style="background-image: url('/sample/images/background_3.jpg');">
+    <div class="item backdrop section-standout" style="background-image: url('/sample/images/background_3.jpg');">
         <div class="content-container">
             <div class="content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
