--- a/sample/modules/profile-banners.html
+++ b/sample/modules/profile-banners.html
@@ -8,13 +8,13 @@
         </div>
         <div class="media-body">
             <!-- Figure Info -->
-            <h4 class="m-0">Official Name</h4>
+            <h3 class="h4 m-0">Official Name</h3>
             <div class="d-block">
                 <span class="font-size-13">Government Entity Title</span>
 
             </div>
             <hr class="m-t-sm m-b-0" />
-            <a href="" class="font-size-12" aria-label="Link to Normal Layout">Website</a>
+            <a href="" class="font-size-12" aria-label="Link to Official's Website">Website</a>
             <!-- End Figure Info -->
         </div>
     </div>
@@ -30,7 +30,7 @@
         <!-- Figure Info -->
         <div class="d-block">
             <div class="m-b-sm">
-                <h4 class="m-0">Official Name</h4>
+                <h3 class="h4 m-0">Official Name</h3>
                 <em class="d-block">Government Entity Title</em>
             </div>
             <em class="d-block font-size-13">Website</em>
